--- a/app/src/main/res/layout/view_event_list.xml
+++ b/app/src/main/res/layout/view_event_list.xml
@@ -8,9 +8,9 @@
         android:id="@+id/tv_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/textview_title" />
+        style="@style/tv_title" />
 
     <TextView
         android:id="@+id/tv_content"
-        style="@style/textview_content" />
+        style="@style/tv_content" />
 </LinearLayout>
