--- a/app/src/main/res/layout/dialog_loading.xml
+++ b/app/src/main/res/layout/dialog_loading.xml
@@ -34,7 +34,7 @@
                 />
 
             <TextView
-                android:id="@+id/load_tv"
+                android:id="@+id/load_tvMsg"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/text_loading"
