--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,9 +25,7 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="textview_title">
-        <item name="android:layout_marginHorizontal">12dp</item>
-        <item name="android:layout_marginVertical">8dp</item>
+    <style name="tv_title">
         <item name="android:ellipsize">end</item>
         <item name="android:lines">1</item>
         <item name="android:textColor">@android:color/black</item>
@@ -35,14 +33,18 @@
         <item name="android:textStyle">bold</item>
     </style>
 
-    <style name="textview_content">
+    <style name="tv_content">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginHorizontal">12dp</item>
         <item name="android:layout_marginBottom">8dp</item>
         <item name="android:ellipsize">end</item>
         <item name="android:lines">3</item>
         <item name="android:textColor">@color/gray</item>
         <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="dialog_tv_white">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">30sp</item>
     </style>
 </resources>
